[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytemuck = "1.4"
futures = "0.3"
glam = "0.10"
image = "0.23"
tracing = "0.1"
tracing-subscriber = "0.2"
wgpu = "0.6"
winit = "0.23"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.6"
